# simple-net

netcore/: Cargo.toml
virtio-net/: Cargo.toml
