[package]
name = "virtio-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtio-drivers = { git = "https://github.com/muxinyu1/virtio-drivers", rev = "7fca8ba" }
netcore = {path = "../netcore" }
